package Model.Entities;

public enum Estado {
    RESUELTO,
    PENDIENTE,
    NORESUELTO
}
